# PICNIC

./: .gitignore  Dockerfile  LICENSE  README.md  env.yml  paper.bib  paper.md  requirements.txt  setup.cfg
.github/workflows/: doc_pages_workflow.yml  docs_pages_workflow.yml
_sample_input_decks/: example_ds004513_sub-s012.inp  one_londonpride_moco.inp  sample.inp  ses-ucbj003.inp  sub-s003_ses-open.inp  sub-s003_ses-open.inp.bak
docker/files/: freesurfer_7.3.2_exclude.txt
docs/: autodoc.rst  build_docs.sh  cards.rst  conf.py  index.rst  reporting.rst  usage.rst  workflows.rst
docs/_build/doctrees/: cards.doctree  environment.pickle  index.doctree  reporting.doctree  run.doctree  workflows.doctree
experiments/: test_diagonal_affine_of_image.ipynb
nipibipy/: input_deck_reader.py  misc.py  pantry.py  run.py  viewer.py
nipibipy/_sample_input_decks/: sample.inp
nipibipy/cards/: camra.py  card_builder.py  coregistration.py  image.py  motion_correction.py  reconall.py  sink.py  tacs.py
nipibipy/interfaces/: custom_fsl_interfaces.py  io_nodes.py  nibabel_nodes.py  string_template_nodes.py
nipibipy/workflows/: camra_workflows.py  custom_workflow_constructors.py  image_workflows.py  motioncorrection_workflows.py  pvc_workflows.py  reconall_workflows.py  reports.py  tacs_workflows.py
scripts/: fetch_templates.py  run_picnic_in_docker  run_picnic_in_docker_as_user  run_picnic_in_dynamic_vm  run_picnic_remapped_in_docker_as_user
src/picnic/: input_deck_reader.py  misc.py  pantry.py  run.py  viewer.py
src/picnic.egg-info/: PKG-INFO  SOURCES.txt
(+83 files in other folders)
