[metadata]
name = picnic
version = 0.0.6
author = Eric Hauser
author_email = eric.hauser@nyspi.columbia.edu
maintainer = Mike Schmidt
maintainer_email = mike.schmidt@nyspi.columbia.edu
description = A python-based modular PET processing pipeline builder
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/ehauser-mind/PICNIC
project_urls =
    Source = https://github.com/ehauser-mind/PICNIC
    Bug Tracker = https://github.com/ehauser-mind/PICNIC/issues/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Environment :: Console

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.10
scripts =
    src/picnic/run.py
    src/picnic/pantry.py
install_requires =
    nipype

[options.packages.find]
where=src

[options.package_data]
picnic.cards.default_parameters =
    *.json
picnic.workflows.default_jsons =
    *.json
picnic.workflows.report_templates =
    *.html
